# bundestag-wrapped

./: .gitignore  BUNDESTAG_WRAPPED_2025.md  CLAUDE.md  Dockerfile  README.md  capacitor.config.ts  docker-compose.yml  index.html  nginx-compose.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: android.yml  ci.yml  ios.yml
android/app/: build.gradle  proguard-rules.pro
api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: colors.ts  index.ts  quiz-template.tsx  speaker-template.tsx
docs/: android-deployment.md  ios-deployment.md
mobile/: .npmrc  app.json  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
mobile/app/: _layout.tsx  index.tsx
mobile/components/: NativeSlideController.tsx  SlideAnimationWrapper.tsx  SlideController.tsx  SlideRenderer.tsx  SoundToggleButton.tsx  WrappedExperience.tsx  WrappedScrollContainer.tsx  (+1 more)
public/: friedrich-merz-speeches.json  government_officials.json  interrupted.json  neutral_interjections.json  speeches_abstimmung.json  speeches_fragestunde.json  speeches_ortskraefte.json  speeches_protokoll.json  speeches_sonstiges.json  speeches_statement.json  speeches_zwischenfrage.json  test-all-sharepics.html  test-share.html  test-speaker-share.html  words_index.json  zwischenrufer.json
scripts/: download_fulltext.py  enhance_with_scheme_d.py  generate-store-assets.cjs  reprocess_speeches.py
src/: App.tsx  index.css  main.tsx
web/: Dockerfile  package-lock.json  package.json
(+908 files in other folders)
