[project]
name = "bundestag-noun-analysis"
version = "0.1.0"
description = "Analyze noun frequency by party in German Bundestag speeches using MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "spacy>=3.7.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
noun-analysis = "noun_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noun_analysis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
